[package]
name = "router-with-tls"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
env_logger = { version =  "0.11.8", default-features = false }
mio = { version = "1.0.4", default-features = false, features = [
    "log",
    "net",
    "os-poll",
] }
rustls = { version = "0.23.29", default-features = false, features = [
    "log",
    "aws_lc_rs",
] }
serde = { version = "1.0.219", default-features = false, features = [
    "derive",
] }
serde_json = { version = "1.0.141", default-features = false, features = ["std"] }
